--- a/src/main/resources/bungee.yml
+++ b/src/main/resources/bungee.yml
@@ -1,3 +1,6 @@
 name: SimpleAliasPlugin
 version: '${project.version}'
 main: com.yopal.simplealiasplugin.SimpleAliasPlugin
+commands:
+  lts:
+  reload:
